# AegisAI

./: .gitignore  AEGISAI_COMMANDS.txt  AEGISAI_PROTOTYPE_SUMMARY.md  API_ENDPOINTS.md  CLEANUP_SUMMARY.md  DEPLOYMENT_README.txt  ENTERPRISE_ENHANCEMENT_COMPLETE.md  ENTERPRISE_FEATURES_SUMMARY.md  ENTERPRISE_IMPLEMENTATION_CHANGES.md  LICENSE  Makefile  NETWORK_PROTECTION.md  README.md  REALTIME_MONITORING_INTEGRATION.md  WEB_PROTECTION_FEATURES.md  WEB_PROTECTION_README.md  WFP_INTEGRATION.md  ZERO_TRUST_SECURITY.md  activate_and_run.py  activate_federated_learning.py  activate_graph_analytics.py  aegisai.bat  aegisai.lic  aegisai.py  aegisai_config.json  build_executable.py  check_admin.py  clean_test_2.py  clearly_malicious.bat  cmd_final_test.bat  cmd_ransomware_test.bat  cmd_test_malware.bat  comprehensive_test.py  create_shortcut.bat  definitely_suspicious.bat  demo_predictive_intelligence.py  demo_realtime_monitor.py  demo_web_protection.py  demonstrate_antivirus.py  docker-compose.cloud.yml  (+51 more)
agent/android/: README.md  build.bat  build.sh
agent/android/app/: build.gradle
agent/android/app/src/main/: AndroidManifest.xml
agent/android/app/src/main/java/com/aegisai/android/: AegisAIService.java  AegisDeviceAdminReceiver.java  (+7 more)
agent/android/app/src/main/res/layout/: activity_main.xml
agent/android/app/src/main/res/values/: strings.xml  styles.xml
agent/ios/: README.md
agent/ios/AegisAI/AegisAI/: AppDelegate.swift  FileMonitor.swift  Info.plist  MemoryScanner.swift  NetworkMonitor.swift  SceneDelegate.swift  ThreatScanner.swift  ViewController.swift
agent/linux/: CMakeLists.txt  aegisai-agent.service  aegisai-agent.service.in  agent.cpp  build.ps1  build.sh  compliance.cpp  compliance.h  ebpf_monitor.c  install.sh  kernel_monitor.cpp  security.cpp  security.h  uninstall.sh
agent/macos/: CMakeLists.txt  agent.mm  security.h
agent/windows/: AegisAI.cpp  CMakeLists.txt  aegisai_filter.inf  agent.cpp  build.bat  compile_driver.bat  compliance.cpp  compliance.h  install_driver.bat  install_kernel_monitor.ps1  kernel_monitor.cpp  security.cpp  security.h  test_agent.bat  test_wfp.cpp  wfp_filter.cpp  wfp_filter.h
certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
cloud/: Dockerfile  backend_config.json  refined_backend_manager.py  refined_telemetry_collector.py  refined_update_server.py  requirements.txt  telemetry_collector.py  update_server.py
cloud/agent/: aegisai-agent-linux_v1.0.0.json  aegisai-agent-macos_v1.0.0.json  aegisai-agent-windows_v1.0.0.json
cloud/api/: Dockerfile  config.py  dashboard_api.py  db_optimizer.py  docker-compose.yml  init.sql  init_db.py  main.py  performance.py  refined_backend.py  requirements.txt  security.py  security_hardening.py  start_server.bat  test_dashboard.py
cloud/api-gateway/: Dockerfile  main.py  requirements.txt
cloud/compliance/: compliance_api.py  compliance_manager.py  enhanced_compliance_reporting.py
cloud/compliance/config/: compliance_config.json
cloud/forensics/: forensic_analyzer.py  requirements.txt
cloud/incident-response/: Dockerfile  README.md  config.json  enhanced_incident_orchestration.py  incident_response.py  requirements.txt
cloud/ml/: Dockerfile  apt_detection.py  behavioral_analysis.py  enhanced_ml_service.py  main.py  ml_service.py  refined_ml_service.py  requirements.txt  start_ml_service.bat
cloud/models/: default_model.json
cloud/sandbox-orchestrator/: Dockerfile  README.md  config.json  orchestrator.py  requirements.txt  start_sandbox.bat
cloud/security-assessment/: assessment_api.py  assessment_manager.py
cloud/security-assessment/config/: assessment_config.json
cloud/siem-integration/: siem_api.py  siem_connector.py
cloud/siem-integration/config/: siem_config.json
cloud/signatures/: signatures_v1.0.0.json
cloud/static-analyzer/: Dockerfile  analyzer.py  main.py  requirements.txt  start_analyzer.bat  threat_intel.py
cloud/static-analyzer/yara_rules/: test_rules.yar
cloud/threat-intel/: threat_intel_service.py
config/: assessment_config.json  compliance_config.json  refined_backend_config.json  siem_config.json  xdr_config.json
core/: README.md  __init__.py  advanced_behavioral_analyzer.py  agent.py  auto_updater.py  behavioral_analyzer.py  behavioral_ml_analyzer.py  behavioral_optimizer.py  config_manager.py  demo.py  diagnostics.py  dns_blocking.py  enhanced_behavioral_analyzer.py  enhanced_ml_detector.py  ensemble_threat_detector.py  hosts_blocker.py  http_proxy.py  license_manager.py  ml_detector.py  performance_profiler.py  predictive_threat_intelligence.py  pti_integration.py  quarantine.py  realtime.py  refined_backend_integration.py  requirements.txt  robust_behavioral_analyzer.py  rust_agent_interface.py  setup.py  signature_updater.py  system_hardening.py  system_integrator.py  test_core.py  virus_total_integration.py  web_protection.py  yara_optimizer.py  yara_scanner.py
core/packaging/linux/: build_deb.sh
core/packaging/macos/: build_pkg.sh
core/packaging/windows/: build_installer.bat  exclude.txt  setup.iss
demos/: ml_enhancement_demo.py  xdr_demo.py
docs/: ml_enhancements.md  xdr_features.md
federated-learning/: README.md  federated_aggregator.py  federated_client.py  federated_server.py  requirements.txt
federated-learning/config/: federated_config.json
graph-analytics/: README.md  graph_analytics_pipeline.py  graph_client.py  graph_server.py  requirements.txt
graph-analytics/config/: graph_config.json
regional-cache/: README.md  cache_client.py  regional_cache_server.py  requirements.txt
rust-prototype/: Cargo.toml  ENHANCED_PROTOTYPE_DOCUMENTATION.md  PROTOTYPE_DOCUMENTATION.md  README.md  build.rs  generate_test_model.py
rust-prototype/src/: behavior.rs  config.rs  decision.rs  main.rs  main_test.rs  ml.rs  privacy.rs  scanner.rs  security.rs  update.rs
sample_test_files/: clean_document.txt  clean_script.py  data.json  suspicious.bat
yara_rules/: advanced_malware_rules.yar  batch_rules.yar  compiled_rules.yarc  exploit_rules.yar  malware_family_rules.yar  miner_rules.yar  powershell_rules.yar
