[package]
name = "aegisai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sysinfo = "0.29"
notify = "5.0"
regex = "1.0"
onnxruntime = "0.0.14"
log = "0.4"
env_logger = "0.9"
config = "0.13"
bsdiff = "0.2.1"
ndarray = "0.15"
patch = "0.1"
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"

# Note: Removed openssl dependency to avoid build issues on Windows
# Using rustls-tls feature in reqwest instead for secure connections